# Rust_Classifier

./: Cargo.toml  README.md
doc/: search-index.js
doc/classifier/: index.html  sidebar-items.js  stability.html  stability.json  struct.NaiveBayes.html
doc/classifier/naive_bayes/: sidebar-items.js  struct.Classifier.html
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.PartialEq.js  trait.PartialOrd.js
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
doc/implementors/core/iter/: trait.Iterator.js
doc/implementors/core/marker/: trait.Copy.js
doc/implementors/rustc_serialize/serialize/: trait.Decodable.js  trait.Encodable.js
doc/regex/: enum.Regex.html  fn.is_match.html  fn.quote.html  sidebar-items.js  struct.Captures.html  struct.FindCaptures.html  struct.FindMatches.html  struct.NoExpand.html  struct.RegexSplits.html  struct.RegexSplitsN.html  struct.SubCaptures.html  struct.SubCapturesNamed.html  struct.SubCapturesPos.html  trait.Replacer.html
doc/src/classifier/: lib.rs.html  naive_bayes.rs.html
doc/src/regex/: compile.rs.html  lib.rs.html  parse.rs.html  re.rs.html  vm.rs.html
doc/src/rustc_serialize/: base64.rs.html  collection_impls.rs.html  hex.rs.html  json.rs.html  lib.rs.html  serialize.rs.html
src/: lib.rs  naive_bayes.rs
tests/: foods.rs
